Fix vertical popup image out of container

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -147,13 +147,17 @@ figcaption {
 }
 
 .popup .content {
-    width: 100%;
+    max-height: 100%;
     margin: auto;
     box-sizing: border-box;
     max-width: 600px;
     background-color: #fff;
     border-radius: 6px;
     padding: 20px;
+}
+
+.popup .content img {
+    max-height: 84vh;
 }
 
 .popup .link {
